static/styles.css
* {
    --button-bottom-border: #d6d3d9;
}

html, body {
    margin: 0;
    padding: 0;
    height: 100%;
}

body {
    font-family: Inter, sans-serif;
    width: 100vw;
    min-height: 100vh;
    color: #323036;
    background-color: #f6f6f6;
}

.content {
    margin: 20px auto;
    padding: 0 20px;
    max-width: 960px;
    width: 90%;
}

.nav {
    color: white;
    width: 100vw;
    display: flex;
    align-items: center;
    background-color: #4453da;
    justify-content: space-between;
    padding: 0 100px;
    box-sizing: border-box;
    flex-wrap: wrap;
    height: 103px;
}

.nav .logo {
    display: flex;
    align-items: center;
    gap: 10px;
    cursor: pointer;
}

.nav .logo img {
    height: 64px;
    border-radius: 15px;
}

.nav .logo p {
    font-size: 32px;
    font-weight: bold;
}

.nav > div {
    display: flex;
    align-items: center;
    gap: 30px;
    flex-wrap: wrap;
}

.nav > div:nth-child(2) {
    margin-left: auto;
}

.nav-items {
    display: flex;
    gap: 15px;
    flex-wrap: wrap;
}

.nav-items p {
    line-height: 12px;
}

.nav-items a {
    cursor: pointer;
    color: inherit;
    text-decoration: inherit;
    padding: 0 10px;
    border-radius: 15px;
    transition: 0.1s;
}

.nav-items a:visited {
    color: inherit;
}

.nav-items a:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

.center {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
}

@media screen and (max-width: 800px) {
    .nav {
        padding: 0 30px;
    }
}

